--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    @apply p-0 m-0 overflow-hidden w-screen h-screen bg-none font-mono;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+    @apply font-bold leading-[38px] text-[26px];
+}
+
+h2 {
+    @apply font-bold leading-[33px] text-[22px];
+}
+
+h3 {
+    @apply font-normal leading-[24px] text-[16px];
+}
+
+h4 {
+    @apply font-normal leading-[20px] text-[13px];
+}
+
+p {
+    @apply font-normal leading-[25px] text-[15px];
 }
